--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -9,7 +9,7 @@
 
 // Mixin for setting font properties
 
-@mixin set-font($fontSize, $fontWeight, $lineHeight, $color, $fontFamily, $fontFamilyType: "sans-serif") {
+@mixin set-font($fontSize: false, $fontWeight: false, $lineHeight: false, $color: false, $fontFamily: false, $fontFamilyType: "sans-serif") {
   @if $fontFamily{
     @if ($fontFamilyType == "sans-serif") {
       font-family: $fontFamily, Arial, sans-serif;
@@ -40,19 +40,19 @@
 
 // Mixin for setting title text
 
-@mixin title-text {
+@mixin title-text() {
   @include set-font(2.4rem, 700, 2.9rem, $darkShade100);
 }
 
 // Mixin for setting subtitle text
 
-@mixin subtitle-text {
+@mixin subtitle-text() {
   @include set-font(1.9rem, 700, 2.3rem, $darkShade100);
 }
 
 // Mixin for setting label-cta-text
 
-@mixin label-cta-text {
+@mixin label-cta-text() {
   @include set-font(1.2rem, 700, 1.5rem, $darkShade100);
   text-transform: uppercase;
 }
@@ -73,7 +73,7 @@
 }
 
 // Mixin for setting border properties
-@mixin set-border($borderWidth: 1px, $borderStyle: solid, $borderColor: $darkShade25, $borderRadius) {
+@mixin set-border($borderWidth: 1px, $borderStyle: solid, $borderColor: $darkShade25, $borderRadius: false) {
   border: $borderWidth $borderStyle $borderColor;
   @if borderRadius {
     border-radius: $borderRadius;
@@ -83,7 +83,7 @@
 // Mixins for flex layout
 
 // Mixin for setting flex layout
-@mixin set-flex ($mainAxis, $crossAxis, $gap, $flexWrap) {
+@mixin set-flex ($mainAxis: false, $crossAxis: false, $gap: false, $flexWrap: false) {
   display: flex;
   @if $mainAxis {
     justify-content: $mainAxis;
@@ -100,13 +100,13 @@
 }
 
 // Mixin for setting flex-direction to column
-@mixin flex-column($mainAxis, $crossAxis, $gap) {
-  @include set-flex($mainAxis, $crossAxis, &gap);
+@mixin flex-column($mainAxis: false, $crossAxis: false, $gap: false) {
+  @include set-flex($mainAxis, $crossAxis, $gap);
   flex-direction: column;
 }
 
 // Mixin for centering flex-items
-@mixin flex-center($gap, $flexWrap) {
+@mixin flex-center($gap: false, $flexWrap: false) {
   @include set-flex(center, center, $gap, $flexWrap);
 }
 
