--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,10 +1,10 @@
-$primaryGradient: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
-$secondaryGradient: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
-$purple: #BC9CFF;
-$green: #6FCF97;
+$primaryGradient: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
+$secondaryGradient: linear-gradient(180deg, #6fcf97, #66d2ea 100%);
+$purple: #bc9cff;
+$green: #6fcf97;
 $darkShade5: rgba(31, 32, 65, 0.05);
 $darkShade10: rgba(31, 32, 65, 0.1);
 $darkShade25: rgba(31, 32, 65, 0.25);
 $darkShade50: rgba(31, 32, 65, 0.5);
 $darkShade75: rgba(31, 32, 65, 0.75);
-$darkShade100: #1F2041;
+$darkShade100: #1f2041;
