Deleted imports of variables and mixins in components

--- a/src/pages/ui-kit/ui-kit.pug
+++ b/src/pages/ui-kit/ui-kit.pug
@@ -72,5 +72,10 @@ block content
           +type-item({
             tag: "body",
             descr: "This is the body text which is used for most <br> of the design, like paragraphs, lists, etc."
-          })           
+          })
+  section.form-elements
+    .page-ui-kit__container
+      .form-elements__content
+        .form-elements__logo
+          img.colors-type__image(src = "../../icons/toxin-uikit-logo.svg")
           
