Created typographical components: h1-title, h2-subtitle, h3-label-cta-text

--- a/src/pages/ui-kit/ui-kit.scss
+++ b/src/pages/ui-kit/ui-kit.scss
@@ -72,5 +72,8 @@
   }
 }
 
+@import '../../templates/components/h1-title/h1-title';
+@import '../../templates/components/h2-subtitle/h2-subtitle';
+@import '../../templates/components/h3-label-cta-text/h3-label-cta-text';
 @import '../../templates/components/colors-item/colors-item';
 @import '../../templates/components/type-item/type-item';
