--- a/src/pages/ui-kit/ui-kit.pug
+++ b/src/pages/ui-kit/ui-kit.pug
@@ -10,6 +10,9 @@ block variables
         bodyClasses = "page-ui-kit"
     
 block includes
+  include ../../templates/components/h1-title/h1-title
+  include ../../templates/components/h2-subtitle/h2-subtitle
+  include ../../templates/components/h3-label-cta-text/h3-label-cta-text
   include ../../templates/components/colors-item/colors-item
   include ../../templates/components/type-item/type-item
 
