--- a/src/pages/ui-kit/ui-kit.scss
+++ b/src/pages/ui-kit/ui-kit.scss
@@ -70,6 +70,11 @@
     left: -11rem;
     @include set-size(4.8rem);
   }
+
+  &__checkbox-buttons,
+  &__rich-checkbox-buttons {
+    @include flex-column($gap: 1rem);
+  }
 }
 
 @import '../../templates/components/h1-title/h1-title';
@@ -77,3 +82,4 @@
 @import '../../templates/components/h3-label-cta-text/h3-label-cta-text';
 @import '../../templates/components/colors-item/colors-item';
 @import '../../templates/components/type-item/type-item';
+@import '../../templates/components/checkbox/checkbox';
