--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,6 @@
 $primaryGradient: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
 $secondaryGradient: linear-gradient(180deg, #6fcf97, #66d2ea 100%);
+$whiteGradient: linear-gradient(180deg, #fff, #fff);
 $purple: #bc9cff;
 $green: #6fcf97;
 $darkShade5: rgba(31, 32, 65, 0.05);
