--- a/src/pages/ui-kit/ui-kit.scss
+++ b/src/pages/ui-kit/ui-kit.scss
@@ -61,7 +61,7 @@
 
   &__content {
     position: relative;
-    @include set-flex($mainAxis: space-between);
+    @include set-flex($mainAxis: space-between, $flexWrap: wrap);
   }
 
   &__logo {
@@ -98,6 +98,19 @@
       @include flex-column($gap: 1.4rem);
     }
   }
+
+  &__main-buttons {
+    width: 33%;
+    &-title {
+      margin-bottom: 1.6rem;
+    }
+    &-content {
+      @include flex-column($gap: 3rem);
+    }
+    &-wrapper {
+      @include set-flex($crossAxis: center, $gap: 2rem);
+    }
+  }
 }
 
 @import '../../templates/components/h1-title/h1-title';
@@ -108,3 +121,4 @@
 @import '../../templates/components/checkbox/checkbox';
 @import '../../templates/components/radio-button/radio-button';
 @import '../../templates/components/toggle/toggle';
+@import '../../templates/components/main-button/main-button';
