--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,5 @@
 $primaryGradient: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
+$primaryGradientSemiTransparent: linear-gradient(180deg, rgba(188, 156, 255, 0.5) 0%, rgba(139, 164, 249, 0.5) 100%);
 $secondaryGradient: linear-gradient(180deg, #6fcf97, #66d2ea 100%);
 $whiteGradient: linear-gradient(180deg, #fff, #fff);
 $purple: #bc9cff;
