--- a/src/pages/ui-kit/ui-kit.pug
+++ b/src/pages/ui-kit/ui-kit.pug
@@ -19,6 +19,7 @@ block includes
   include ../../templates/components/radio-button/radio-button
   include ../../templates/components/toggle/toggle
   include ../../templates/components/main-button/main-button
+  include ../../templates/components/bullet-list/bullet-list
 
 block content
   section.colors-type
@@ -185,5 +186,16 @@ block content
               style: "filled",
               hasArrow: true,
               text: 'перейти к оплате'
+            })
+        .form-elements__bullet-list 
+          .form-elements__bullet-list-title 
+            +h3-label-cta-text("bullet list")
+          .form-elements__bullet-list-content 
+            +bullet-list({
+              items: [
+                "нельзя с питомцами",
+                "без вечеринок и мероприятий",
+                "Время прибытия — после 13:00, а выезд до 12:00"
+              ]
             })
             
