--- a/src/pages/ui-kit/ui-kit.scss
+++ b/src/pages/ui-kit/ui-kit.scss
@@ -111,6 +111,12 @@
       @include set-flex($crossAxis: center, $gap: 2rem);
     }
   }
+
+  &__bullet-list {
+    &-title {
+      margin-bottom: 1.6rem;
+    }
+  }
 }
 
 @import '../../templates/components/h1-title/h1-title';
@@ -122,3 +128,4 @@
 @import '../../templates/components/radio-button/radio-button';
 @import '../../templates/components/toggle/toggle';
 @import '../../templates/components/main-button/main-button';
+@import '../../templates/components/bullet-list/bullet-list';
