Added comments at pug components, describing the usage of mixin's arguements

--- a/src/templates/components/colors-item/colors-item.pug
+++ b/src/templates/components/colors-item/colors-item.pug
@@ -1,3 +1,8 @@
+//-
+  options.color - color of square
+  options.name - color's name
+  options.code - color's hex code
+
 mixin colors-item(options)
   if !options
     - options = {}
