--- a/src/templates/components/main-button/main-button.pug
+++ b/src/templates/components/main-button/main-button.pug
@@ -1,3 +1,11 @@
+//-
+  classes - array of classes for button modification
+  options.isBig - defines, whether button is big or not
+  options.style - defines the style of button
+  options.hasArrow - deifnes, whether button has arrow or not
+  options.isActive - defines, whether button is active or not
+  options.text - text inside button
+
 mixin main-button(options)
   if !options
     - options = {}
