--- a/src/templates/components/radio-button/radio-button.pug
+++ b/src/templates/components/radio-button/radio-button.pug
@@ -1,3 +1,8 @@
+//-
+  options.name - name attribute for radio's input
+  options.checked - defines, whether radio is checked or not
+  options.label - label for radio
+
 mixin radio-button(options)
   if !options
     - options = {}
