--- a/src/templates/components/toggle/toggle.pug
+++ b/src/templates/components/toggle/toggle.pug
@@ -1,3 +1,8 @@
+//-
+  options.name - name attribute for toggle's input
+  options.checked - defines, whether toggle input is checked or not
+  options.label - label for toggle
+
 mixin toggle(options)
   if !options
     - options = {}
