--- a/src/templates/components/checkbox/checkbox.pug
+++ b/src/templates/components/checkbox/checkbox.pug
@@ -1,3 +1,10 @@
+//-
+  options.name - name attribute for checkbox's input
+  options.checked - defines, whether checkbox is checked or not
+  options.label - label for checkbox
+  options.isRich - defines, whether checkbox is rich type or not
+  options.description - description for checkbox
+
 mixin checkbox(options)
   if !options
     - options = {}
