--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -8,7 +8,7 @@
 // Mixin for setting font properties
 
 @mixin set-font($fontSize: false, $fontWeight: false, $lineHeight: false, $color: false, $fontFamily: false, $fontFamilyType: "sans-serif") {
-  @if $fontFamily{
+  @if $fontFamily != inherit{
 
     @if ($fontFamilyType == "sans-serif") {
       font-family: $fontFamily, Arial, sans-serif;
@@ -23,8 +23,11 @@
     }
 
     @if ($fontFamilyType == "icons") {
-      font-family: $fontFamily
+      font-family: $fontFamily;
     }
+
+  } @else {
+    font-family: inherit;
   }
 
   @if $fontSize {
