--- a/src/pages/ui-kit/ui-kit.scss
+++ b/src/pages/ui-kit/ui-kit.scss
@@ -117,6 +117,13 @@
       margin-bottom: 1.6rem;
     }
   }
+
+  &__text-fields {
+    width: 33%;
+    &-top {
+      @include flex-column($gap: 2rem);
+    }
+  }
 }
 
 @import '../../templates/components/h1-title/h1-title';
@@ -129,3 +136,4 @@
 @import '../../templates/components/toggle/toggle';
 @import '../../templates/components/main-button/main-button';
 @import '../../templates/components/bullet-list/bullet-list';
+@import '../../templates/components/text-field/text-field';
