--- a/src/templates/components/subscription-field/_subscription-field.scss
+++ b/src/templates/components/subscription-field/_subscription-field.scss
@@ -1,36 +1,35 @@
 .subscription-field {
   position: relative;
-  @include set-border($borderColor: $darkShade25, $borderRadius: 0.4rem);
   width: 100%;
   max-width: 267px;
-
-  &:hover, &:focus, &_active {
-    border-color: $darkShade75;
-
-    .subscription-field__input {
-      &::placeholder {
-        color: $darkShade75;
-      }
-    }
-  }
 
   &__wrapper {
     position: relative;
     display: inline-block;
-    height: 100%;
+    @include set-size(100%);
     line-height: 1.8rem;
   }
 
   &__input {
     display: inline-block;
     @include set-size(100%);
-    padding: 1.3rem 1.5rem 1.3rem 1.5rem;
+    padding: 1.3rem 4.4rem 1.3rem 1.5rem;
     border: none;
+    outline: none;
+    @include set-border($borderColor: $darkShade25, $borderRadius: 0.4rem);
     font-family: inherit;
 
     &::placeholder {
       line-height: 1.8rem;
       color: $darkShade25;
+    }
+
+    &:hover, &:focus, &_active {
+      border-color: $darkShade75;
+  
+      &::placeholder {
+        color: $darkShade75;
+      }
     }
   }
 
