Modified subscription-field and text-field components

--- a/src/pages/ui-kit/ui-kit.pug
+++ b/src/pages/ui-kit/ui-kit.pug
@@ -213,6 +213,7 @@ block content
             +text-field({
               isActive: true,
               label: "text field",
+              state: "hover / focus",
               name: "field",
               type: "email",
               placeholder: "This is pretty awesome",
