--- a/src/templates/components/like-button/like-button.pug
+++ b/src/templates/components/like-button/like-button.pug
@@ -1,23 +1,40 @@
 //-
   options.count - amount of likes
+  options.borderColor - color of button's border
+  options.iconIsFilled - defines, whether button's icon is filled of not
+  options.counterColor = color of button's counter area text
+  options.isActive - defines, whether button is active or not 
 
 mixin like-button(options)
   if !options
     - options = {}
 
+  - 
+    const btnClasses = [],
+          iconClasses = [],
+          counterClasses = []
+
+  if options.isActive 
+    - btnClasses.push(options.borderColor ? `like-button_${options.borderColor}` : "")
+    - iconClasses.push(options.iconIsFilled ? "like-button__icon_filled" : "")
+    - iconClasses.push(options.iconColor ? `like-button__icon_${options.iconColor}` : "")
+    - counterClasses.push(options.counterColor ? `like-button__counter_${options.counterColor}` : "")
+
+
   button.like-button(
-    class = options.borderColor ? `like-button_${options.borderColor}` : "",
+    class = btnClasses,
+    data-active = options.isActive ? true : false,
     data-border-color = options.borderColor,
-    data-count = options.count,
+    data-icon-color = options.iconColor,
+    data-counter-color = options.counterColor,
+    data-count = options.count
   )
     span.like-button__inner
       span.like-button__icon(
-        class = options.iconIsFilled ? "like-button__icon_filled" : "",
-        class = options.iconColor ? `like-button__icon_${options.iconColor}` : "",
+        class = iconClasses,
         data-icon-color = options.iconColor
       ) 
       span.like-button__counter(
+        class = counterClasses,
         class = (options.count < 10) ? "like-button__counter_with_padding" : "",
-        class = options.counterColor ? `like-button__counter_${options.counterColor}` : "",
-        data-counter-color = options.counterColor
       )= options.count
