--- a/src/pages/ui-kit/ui-kit.scss
+++ b/src/pages/ui-kit/ui-kit.scss
@@ -149,3 +149,4 @@
 @import '../../templates/components/text-field/text-field';
 @import '../../templates/components/subscription-field/subscription-field';
 @import '../..//templates/components/like-button/like-button';
+@import '../../templates/components/feed/feed';
