--- a/src/templates/components/like-button/like-button.pug
+++ b/src/templates/components/like-button/like-button.pug
@@ -23,7 +23,7 @@ mixin like-button(options)
 
   button.like-button(
     class = btnClasses,
-    data-active = options.isActive ? true : false,
+    data-active = options.isActive ? "true" : "false",
     data-border-color = options.borderColor,
     data-icon-color = options.iconColor,
     data-counter-color = options.counterColor,
