--- a/src/pages/ui-kit/ui-kit.scss
+++ b/src/pages/ui-kit/ui-kit.scss
@@ -130,9 +130,15 @@
     &-title {
       margin-bottom: 1.6rem;
     }
+
     &-content {
       @include set-flex($gap: 1rem, $flexWrap: wrap);
     }
+  }
+
+  &__room-features {
+    width: 33%;
+    @include flex-column($gap: 2rem);
   }
 }
 
@@ -150,3 +156,4 @@
 @import '../../templates/components/subscription-field/subscription-field';
 @import '../..//templates/components/like-button/like-button';
 @import '../../templates/components/feed/feed';
+@import '../../templates/components/room-features-item/room-features-item';
