Created expandable-checkbox-list component

--- a/src/pages/ui-kit/ui-kit.scss
+++ b/src/pages/ui-kit/ui-kit.scss
@@ -157,3 +157,4 @@
 @import '../..//templates/components/like-button/like-button';
 @import '../../templates/components/feed/feed';
 @import '../../templates/components/room-features-item/room-features-item';
+@import '../../templates/components/expandable-checkbox-list/expandable-checkbox-list';
