--- a/src/pages/ui-kit/ui-kit.pug
+++ b/src/pages/ui-kit/ui-kit.pug
@@ -25,6 +25,7 @@ block includes
   include ../..//templates/components/like-button/like-button
   include ../../templates/components/feed/feed
   include ../../templates/components/room-features-item/room-features-item
+  include ../../templates/components/expandable-checkbox-list/expandable-checkbox-list
 
 block content
   section.colors-type
@@ -273,4 +274,17 @@ block content
             icon: "location_city",
             subtitle: "удобство",
             descr: "окно в каждой из спален"
+          })
+        .form-elements__expandable-checkbox-list 
+          +expandable-checkbox-list({
+            isExpanded: false,
+            selectText: "expandable checkbox list",
+            items: [
+              {name: "includes", checked: false, label: "Завтрак"},
+              {name: "includes", checked: true, label: "Письменный стол"},
+              {name: "includes", checked: true, label: "Стул для кормления"},
+              {name: "includes", checked: true, label: "Кроватка"},
+              {name: "includes", checked: false, label: "Телевизор"},
+              {name: "includes", checked: false, label: "Шампунь"}
+            ]
           })
